tests/analyzer/errors/import_items.rv
use data.math{Triangle}

fn main() {}
